--- a/css/naver.css
+++ b/css/naver.css
@@ -1350,6 +1350,11 @@ ul,ol{
 	box-sizing: border-box;
 	height: 52px;
 }
+.menu .menu-service-box .container{
+	height: 100%;
+	padding: 20px 30px 22px;
+	position: relative;
+}
 .menu .green-menu-box,
 .menu .black-menu-box{
 	float: left;
@@ -1465,16 +1470,89 @@ ul,ol{
 	margin: 8px 5px 0 0;
 	vertical-align: top;
 }
-.menu .memu-service-box{
+.menu .menu-service-box{
 	height: 300px;
-	background-color: red;
+	background-color: #fff;
 	z-index: 100;
 	position: absolute;
 	left: 0;
 	right: 0;
+	box-shadow: 0 4px 4px 0 rgba(0,0,0,.12);
 	/* display: none; */
 }
-
+.menu .menu-service-box .list-service{
+	width: 161px;
+	box-sizing: border-box;
+	float: left;
+	padding: 0 18px 0 19px;
+	height: 237px;
+}
+.menu .menu-service-box .list-service+.list-service{
+	border-left: 1px solid #e4e8eb;
+}
+.menu .menu-service-box .group-serivce-box{
+	border: 1px solid #e4e8eb;
+	border-width: 0 1px;
+	font-size: 13px;
+	line-height: 26px;
+}
+.menu .menu-service-box .list-service:last-of-type{
+	width: 162px;
+}
+.menu .menu-service-box .service-data>a{
+	color: #202020;
+}
+.menu .menu-service-box .service-data>a:hover{
+	text-decoration: underline;
+}
+.menu .menu-service-box .service-data .more-dic{
+	display: inline-block;
+	margin-top: 5px;
+	color: gray;
+}
+.menu .menu-service-box .service-data .more-dic::after{
+	display: inline-block;
+	width: 6px;
+	height: 10px;
+	margin-left: 7px;
+	content: '';
+	vertical-align: 0;
+	background-image: url(https://s.pstatic.net/static/www/img/uit/2020/sp_main_1f05c0.png);
+	background-size: 440px 410px;
+	background-position: -319px -296px;
+}
+.menu .menu-service-box .btn-box{
+	position: absolute;
+	width: 220px;
+	background-color: #fff;
+	height: 30px;
+	right: 30px;
+	top: -41px;
+	font-size: 12px;
+}
+.menu .btn-box .service-btn,
+.menu .btn-box .menu-set-btn{
+	display: inline-block;
+	padding: 7px 13px 5px;
+	margin-left: 3px;
+	background-color: #fff;
+	border-radius: 15px;
+	border: 1px solid #dae1e6;
+	line-height: 16px;
+	font-size: 12px;
+	color: #202020;
+}
+.menu .btn-box .menu-set-btn::before{
+	display: inline-block;
+	content: '';
+	width: 11px;
+	height: 11px;
+	vertical-align: top;
+	margin: 2px 5px 0 0;
+	background-image: url(https://s.pstatic.net/static/www/img/uit/2020/sp_main_1f05c0.png);
+	background-size: 440px 410px;
+	background-position: -293px -308px;
+}
 .theme-cont-box .top-box{
 	padding: 22px 0 18px;
 }
