네이버 따라하기4

--- a/css/naver.css
+++ b/css/naver.css
@@ -1344,6 +1344,7 @@ ul,ol{
 	padding: 0 30px;
 	box-sizing: border-box;
 	height: 52px;
+	position: relative;
 }
 .menu .menu-service-box .container{
 	height: 100%;
@@ -1464,6 +1465,39 @@ ul,ol{
 	float: left;
 	margin: 8px 5px 0 0;
 	vertical-align: top;
+}
+.menu .filt-search-box{
+	position: absolute;
+	top: -1px;
+	right: 30px;
+	width: 601px;
+	height: 425px;
+	background-color: #fff;
+	z-index: 5;
+	box-shadow: 0 4px 6px 0 rgba(0,0,0,.12);
+	display: none;
+}
+.menu .filt-search-box .head-box{
+	height: 50px;
+	border: 1px solid rgb(224,227,230);
+	border-width: 1px 0;
+	position: relative;
+}
+.menu .head-box .close-btn{
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+.menu .head-box .close-btn::before{
+	display: inline-block;
+	width: 14px;
+	height: 14px;
+	vertical-align: top;
+	content: '';
+	margin: 19px 18px;
+	background-image: url(https://s.pstatic.net/static/www/img/uit/2020/sp_main_1f05c0.png);
+	background-size: 440px 410px;
+	background-position: -420px -347px;
 }
 .menu .menu-service-box{
 	height: 300px;
